--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <div class="article">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt quaerat fuga, officia nesciunt minus nam omnis perspiciatis voluptate at minima aut sed, veritatis sequi id earum necessitatibus maiores fugit pariatur blanditiis ducimus dolores ab dignissimos labore consectetur? Itaque asperiores voluptates ut quisquam maiores alias neque, quam autem accusantium, et quis. Omnis impedit aut sit, rerum provident tempore consequatur ad illum iste corporis accusamus facere ratione repellat, molestias, debitis enim optio perspiciatis quae error minima temporibus officia dicta. Officia quasi repudiandae, sed et perferendis, esse quae sapiente ad placeat earum facere cupiditate magni nemo molestiae pariatur quod rem possimus voluptatem rerum est ducimus quo vero dolorem similique! Necessitatibus expedita dolore reprehenderit distinctio, nisi vero totam modi sint similique obcaecati, odit laboriosam veniam impedit doloribus aliquid perspiciatis nihil! Aut alias quia reprehenderit totam! Quasi unde quia labore. Voluptates a adipisci atque tenetur. Nam ipsam itaque ratione porro libero dolores, iusto voluptate natus facere expedita, enim ducimus quis eum vel soluta qui obcaecati officia in quam? Reprehenderit aspernatur nemo placeat voluptatum? Rem, recusandae tenetur provident libero, pariatur quibusdam reiciendis quam consequatur placeat explicabo iusto deserunt? Repellat quibusdam similique reiciendis magnam tempora earum neque assumenda, corporis deserunt fugiat, repellendus sequi ipsa architecto magni tempore.
         </div>
-    
+        <!-- This is a comment -->
+
         <div class="copywriting">
             &copy; All rights reserved to <span class="bold">none</span>!! Fell free to copy!!
         </div>
