added some punctuations

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- This is a comment -->
 
         <div class="copywriting">
-            &copy; All rights reserved to <span class="bold">none</span>!! Fell free to copy!!
+            &copy; All rights reserved to <span class="bold">none</span>!! Fell free to copy!!!
         </div>
     </div>
 </body>
